# Qt_tutorial

./: .gitignore
Merge_Large_Image/: CMakeLists.txt  README.md  main.cpp  mainviewmodel.cpp  mainviewmodel.h
Merge_Large_Image/Common/: FolderManager.cpp  FolderManager.h  FolderWork.cpp  FolderWork.h
Merge_Large_Image/Resources/: AboutDialog.qml  Main.qml
